# DTE-3612-FEM_theory_and_implementation

./: .gitignore  README.md
FEM-project/: CMakeLists.txt  FEMobject.cpp  FEMobject.h  create_OBJ.cpp  create_OBJ.h  main.cpp  test_eigen.h  test_ttl.h
